fix dark mode

--- a/src/investarena/components/LeftSidebar/LongTermStatistics/LongTermStatistics-nightmode.less
+++ b/src/investarena/components/LeftSidebar/LongTermStatistics/LongTermStatistics-nightmode.less
@@ -2,5 +2,11 @@
 
 .nightmode {
   .InstrumentLongTermStatistics {
+    &__title {
+    border-bottom: @base-border;
+  }
+
+    background-color: @grey-nero;
+    border: @normal-grey;
   }
 }
